--- a/public/index.html
+++ b/public/index.html
@@ -17,6 +17,8 @@
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@tabler/core@1.0.0-beta17/dist/css/tabler-payments.min.css">
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@tabler/core@1.0.0-beta17/dist/css/tabler-vendors.min.css">
 
+<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+
     <style>
       @font-face {
         font-family: Gumela ;
